// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Debe mostrar Gifgrid correctamente Debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__pulse"
  >
    One Punch Man
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Debe mostrar Gifgrid correctamente Debe de mostrar toMatchSnapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__pulse"
  >
    One Punch Man
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
